updated Dockerfile and Dockerfile.ci

--- a/.acquia/Dockerfile.ci
+++ b/.acquia/Dockerfile.ci
@@ -1,6 +1,4 @@
+ARG REPO_LOCATION
 ARG BASE_IMAGE=quay.io/prometheus/golang-builder:1.23-base
 
-FROM $BASE_IMAGE
-
-ARG ARCH
-ARG OS
+FROM ${REPO_LOCATION}${BASE_IMAGE}
