--- a/.acquia/pipeline.yaml
+++ b/.acquia/pipeline.yaml
@@ -7,12 +7,10 @@ service: blackbox-exporter
 validate_config: true
 
 environment_image:
+  name: devops-blackbox-exporter-environment
   file: ".acquia/Dockerfile.ci"
   context: "."
   cache_from: devops-blackbox-exporter-environment
-  build_args:
-    - "ARCH=${ARCH}"
-    - "OS=${OS}"
 
 pre_build:
   code_analysis:
