--- a/.acquia/pipeline.yaml
+++ b/.acquia/pipeline.yaml
@@ -18,9 +18,8 @@ pre_build:
   build_binary:
     - steps:
       - |
-        sleep 36000
-        # make common-build PREFIX=.build/${OS}-${ARCH}
-        # mv .build/${OS}-${ARCH}/devops-blackbox-exporter .build/${OS}-${ARCH}/blackbox_exporter
+        make common-build PREFIX=.build/${OS}-${ARCH}
+        mv .build/${OS}-${ARCH}/devops-blackbox-exporter .build/${OS}-${ARCH}/blackbox_exporter
 
 build:
   service_image:
